@@ -1,7 +1,10 @@
 Mon Dec  3 2012
 1. New features
    * add get_posterior_mean for stanfit to obtain the posterior
-     mean for all parameter 
+     mean for all parameters
+   * add optimizing for stanmodel to get MAP point estimate
+2. Changes
+   * include library Eigen (remove dependency on RcppEigen)
 
 Sat Nov 24 2012
 1. New features 
